Fix spacing issues

--- a/src/components/Link/Link.module.scss
+++ b/src/components/Link/Link.module.scss
@@ -6,6 +6,7 @@
   letter-spacing: $letter-spacing;
   padding: $spacing-tight;
   position: relative;
+  display: inline-block;
 
   a {
     display: inline-block;
